Refactor pagination classes and update API parameters for improved clarity